Overflow error in the hero section fixed

--- a/src/scss/_medium.scss
+++ b/src/scss/_medium.scss
@@ -23,7 +23,6 @@
   #hero{
     background-image: url('../imgs/banner1_1600.jpg');
     div{
-      left: 50%;
       top: 40%;
     }
   }
