--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -122,7 +122,7 @@ nav{
   div{
     width: 50%;
     position: relative;
-    left: 55%;
+    left: 50%;
     top: 60%;
     overflow: hidden;
     img{
